--- a/book.html
+++ b/book.html
@@ -7,7 +7,7 @@
     <title>Site</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="shortcut icon" href="img/logo-ico.ico" type="image/x-icon">
-    <script type="text/javascript" src="/eel.js"></script>
+    <script type="text/javascript" src="eel.js"></script>
 
 </head>
 <body>
