--- a/about-us.html
+++ b/about-us.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">Index</div>    
+            <div class="logo">The Best Day</div>    
             <div class="log-in-block">Log-in/registr</div>
             
         </div>
@@ -73,27 +73,21 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <div class="about-us-text">
-                        <h2>Name</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                        <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                        <h2>Артем</h2>
+                        <p>Студент Національного Університету "Львівська політехніка"</p>
+                        <p>Спеціальність: Комп'ютерна інженерія</p>
+                        <p>Навичики:3Ds Max, Unity, Python, C++, C, C#, HTML, CSS</p>
                     </div>
                     <div class="about-us-img">
-                        <img src="img/person-img.png" alt="#">
+                        <img src="img/Art.png" alt="#">
                     </div>   
                 </div>
             </div>
             <div class="wrapper">
                 <div class="detailed-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Володіє</p>
-                    <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                    </ul>
+                    <p>"У мене давно була ідея зробити платформу яка б давала можливість іншим людям розвивати себе всебічно.</p>
+                    <p>Організувавши роботу "ІТ-camp" ми вирішили створити website по саморозвитку."</p>
+                    <p>Головна мета проекту це дати змогу кожному охочому знайти для себе щось корисне, цікаве та використати його з користю!"</p>
                 </div>
             </div>
         </article>
@@ -101,27 +95,20 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <div class="about-us-text">
-                        <h2>Name</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                        <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                        <h2>Захар</h2>
+                        <p>Студент Хмельницького Національного Університету</p>
+                        <p>Спеціальність: Комп'ютерна інженерія</p>
+                        <p>Навички: Junior Python Developer, C, SQL, HTML, CSS</p>
                     </div>
                     <div class="about-us-img">
-                        <img src="img/person-img.png" alt="#">
+                        <img src="img/hoh.png" alt="#">
                     </div>   
                 </div>
             </div>
             <div class="wrapper">
                 <div class="detailed-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Володіє</p>
-                    <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                    </ul>
+                    <p>"Саморозток це невід'ємна частина успішної людини.</p>
+                    <p>Мені сподобалась ідея сервісу, та особисто займався бекендом сайту та десктопною версією проекту."</p>
                 </div>
             </div>
         </article>
@@ -129,10 +116,32 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <div class="about-us-text">
-                        <h2>Name</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                        <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                        <h2>Володя</h2>
+                        <p>Студент Хмельницького Національного Університету</p>
+                        <p>Спеціальність: Комп'ютерна інженерія</p>
+                        <p>Навички: HTML, CSS, JavaScript, Php, C</p>
+                    </div>
+                    <div class="about-us-img">
+                        <img src="img/valodya.png" alt="#">
+                    </div>   
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="detailed-text">
+                    <p>"Під час начання я зіткнувся з проблемою нехватки часу.</p>
+                    <p>Я довго не міг нічого з цим поробти, але мій друг підсказав мені деякі відео з саморозвитку  з яких я і навчився керувати своїм днем.</p>
+                    <p>Почувши що команда "ІТ-camp" розробляє інформаційну платформу яка допоможе всім охочим почати краще життя, я негайно вирішив їм допомогти з цим проектом."</p>
+                </div>
+            </div>
+        </article>
+        <article class="person">
+            <div class="introductory-text index-gradient">
+                <div class="wrapper">
+                    <div class="about-us-text">
+                        <h2>Іван</h2>
+                        <p>Студент Хмельницького Національного Університету</p>
+                        <p>Спеціальність: Автоматизація та комп'ютерно-інтегровані технології</p>
+                        <p>Навички: Blender, Unity, HTML, CSS, JavaScript, C, С#</p>
                     </div>
                     <div class="about-us-img">
                         <img src="img/person-img.png" alt="#">
@@ -141,15 +150,29 @@
             </div>
             <div class="wrapper">
                 <div class="detailed-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Володіє</p>
-                    <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                    </ul>
+                    <p class = "citata">"Наш великий недолік в тому, що ми занадто швидко опускаємо руки. Найвірніший шлях до успіху — весь час пробувати ще раз."</p>
+                    <p class = "avtor_citata">Томас Едісон</p>
+                </div>
+            </div>
+        </article>
+        <article class="person">
+            <div class="introductory-text index-gradient">
+                <div class="wrapper">
+                    <div class="about-us-text">
+                        <h2>Макс</h2>
+                        <p>Студент Національного Університету "Львівська політехніка"</p>
+                        <p>Спеціальність: Комп'ютерна інженерія</p>
+                        <p>Навички: HTML, CSS, JavaScript, C, Python</p>
+                    </div>
+                    <div class="about-us-img">
+                        <img src="img/maks.png" alt="#">
+                    </div>   
+                </div>
+            </div>
+            <div class="wrapper">
+                <div class="detailed-text">
+                    <p class = "citata">"Успіх – це здатність крокувати від однієї невдачі до іншої, не втрачаючи ентузіазму."</p>
+                    <p class = "avtor_citata">Вінстон Черчилль</p>
                 </div>
             </div>
         </article>
