--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">Index</div>    
+            <div class="logo">The Best Day</div>    
             <div class="log-in-block">Log-in/registr</div>
             
         </div>
@@ -65,10 +65,10 @@
         <article class="etered-text etered-text-mein">
             <div class="introductory-text">
                 <div class="wrapper">
-                    <h2>Про що сайт</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <h2>Саморозвиток — що це?</h2>
+                    <p>Саморозвиток передбачає якісне поліпшення якої-небудь сторони життя, особистісне зростання.</p>
+                    <p>Багато хто думає, що для запуску процесу змін, особистісного зростання необхідна величезна кількість часу, коштів, таланту.</p>
+                    <p>Насправді, варто лише почати змінювати себе з малого — присвятити вдосконаленню власної особистості від 20 до 30 хвилин на день.</p>
                 </div>
             </div>
             <a href="#" class="scroll">
@@ -82,9 +82,9 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Книги</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <p>Книги для саморозвитку — це один із кращих способів пізнання та розкриття себе як особистості.</p>
+                    <p>Така література насамперед розширює світогляд, адже ви буквально пірнаєте з головою у думки та життєвий досвід іншої людини.</p>
+                    <p>Звісно, мотиваційні книги не слід сприймати як ключ до вирішення всіх проблем, так само як антидепресанти не слід сприймати як таблетки вічного щастя.Але при грамотному підході до двох вищезгаданих речей — ви зможете перетворити їх у потужну силу для покращення свого фізичного та психологічного стану.</p>
                 </div>
                 <a href="book.html" class="a-href"></a>
             </div>
@@ -92,13 +92,17 @@
                 <div class="detailed-text">
                     <h3>Основні переваги</h3>
                     <ul>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
+                        <li>1.Знання</li>
+                        <p>Щоб ви не читали, голова наповнюється новими знаннями, і ви ніколи не знаєте, в який момент вони вам знадобляться. Але чим знань більше, тим більше ви готові протистояти будь-яким перешкодам.</p>
+                        <li>2.Розумова стимуляція</li>
+                        <p>Дослідження показують, що постійна стимуляція мозку, чим є читання, знижує ризик розвитку хвороби Альцгеймера і деменції. Так само, як і будь-якому м’язу людського тіла, мозку необхідне тренування, щоб залишатися сильним і здоровим.</p>
+                        <li>3.Розширення словникового запасу</li>
+                        <p>Чим більше ви читаєте, тим більш змістовно і вишукано говорите. А це в свою чергу сприяє і більшій впевненості в собі, і кар’єрним можливостям. До того ж, ви черпаєте слова не тільки з рідної, а й іноземних мов, що ставить вас ще на щабель вище.</p>
+                        <li>4.Поліпшення пам’яті</li>
+                        <p>Читаючи книгу, ви запам’ятовуєте неймовірну кількість персонажів, їхні історії, почуття, масу підсюжетів і деталей. Ця нова інформація нашаровується на вже наявну і формує нові зв’язки, завдяки чому запам’ятовується ще краще.</p>
+                        <li>5.Заспокоєння</li>
+                        <p>Уже той момент, коли ви берете до рук книгу, приносить релаксацію, а те, про що ви читаєте, здатне дати відчуття внутрішнього спокою й умиротворення. Деякі тексти знижують кров’яний тиск, не кажучи вже про те, що книги із саморозвитку можуть вирішувати конкретні проблеми.</p>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
                 </div>
             </div>
         </article>
@@ -106,22 +110,20 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Подкасти</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Це збірка серійних аудіофайлів в основному на одну тему або з однією метою. Подкасти можуть бути як розважальні, так і наукові або просто новини. Це річ, яка є на кожному телефоні, і вони 100% безкоштовні.</p>
+                    <p>Ви можете слухати уроки, поради, помилки та наставництво знаменитих людей в тій чи іншій індустрії. Наприклад, щоб піти на семінар Тоні Робінса в Америці, треба заплатити $500. Але це останні місця в залі, де будуть тисячі людей. А от подкаст ви можете годинами слухати безкоштовно. </p>
+                    <p>Подкаст безкоштовно завантажує нові епізоди, і вам не потрібен інтернет, щоб їх слухати. Також ви можете йти на роботу чи їхати в машині, чи навіть працювати та слухати подкасти. На відміну від YouTube, вам не потрібно увесь час сидіти біля монітора і щось дивитися.</p>
+                    <p>Як ви вже знаєте, смартфон – хороша річ, і її можна використовувати як для розваг, так і для речей, які вам приносять користь. Тож я рекомендую вам спробувати підписатися на подкасти, які вам до душі і послухати їх. Втрачати нема чого, а виграш безлімітний.</p>
                 </div>
                 <a href="podcast.html" class="a-href"></a>
             </div>
             <div class="wrapper">
                 <div class="detailed-text">
                     <h3>Основні переваги</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <p>Прослуховування подкасту можна поєднувати з іншими справами. Зазвичай це плавання, біг, домашнє прибирання. </p>
+                    <p>Подкаст простий у виробництві, і домогтися гарної якості звуку нескладно. Висока якість дозволяє слухати подкасти на прискоренні.</p>
+                    <p>Існує безліч програм для смартфонів, які дозволяють завантажувати та слухати подкасти в літаку або місцях, де не ловить інтернет.</p>
+                    <p>Всі подкасти – безкоштовні. Вам не потрібно платити за прослуховування, і, на відміну від YouTube, реклами або немає, або дуже мало.</p>
                 </div>
             </div>
         </article>
@@ -129,21 +131,23 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Спорт</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <p>Спорт- це здоров'я.Здоровий спосіб життя,правильне і збалансоване харчування,нормальний сон-все це сприяє зміцненню здоров'я,але цього недостатньо.</p>
+                    <p>Щоб стати по-справньому гармонійною людиною потрібно обов'язково займатися спортом!</p>
+                    <p>Спорт є ефективним засобом фізичного виховання, його цінність визначається стимулюючим впливом на поширення фізичної культури серед різних верств населення, і в цьому плані спорт має міжнародне значення.</p>
                 </div>
                 <a href="sport.html" class="a-href"></a>
             </div>
             <div class="wrapper">
                 <div class="detailed-text">
-                    <h3>Основні переваги</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <h3>Чому варто займатись?</h3>
+                    <p>Тренування знижують ваш рівень стресу</p>
+                    <p>Спорт може бути антидотом проти тривожності</p>
+                    <p>Тренування = відчуття щастя</p>
+                    <p>Спорт підвищує вашу самооцінку</p>
+                    <p>А також спорт гарно вплине на ваше сексуальне життя</p>
+                    <p>Спорт покращить ваш сон</p>
+                    <p>Спорт може підвищити вашу продуктивність</p>
+                    <p>А також спорт підвищує вашу креативність!</p>
                 </div>
             </div>
         </article>
