--- a/podcast.html
+++ b/podcast.html
@@ -7,7 +7,7 @@
     <title>Site</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="shortcut icon" href="img/logo-ico.ico" type="image/x-icon">
-    <script type="text/javascript" src="eel.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
                     <div class="drop-list">
                         <div>
                             <div class="logo_wrp">
-                                <div class='logo'>Logo</div>
+                                <div class='logo'><a href="index.html">The Best Day</a></div>
                                 <div class='ext' onclick="hideFxd()">X</div>
                             </div>
                             <div class='ui_wrp'>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">Index</div>    
-            <div class="log-in-block">Log-in/registr</div>
+            <div class="logo"><a href="index.html">The Best Day</a></div>    
+            <div class="log-in-block"><a href="#">Log-in/registr</a></div>
             
         </div>
     </header>
@@ -66,10 +66,8 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Подкасти</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Це збірка серійних аудіофайлів в основному на одну тему або з однією метою. Подкасти можуть бути як розважальні, так і наукові або просто новини. Це річ, яка є на кожному телефоні, і вони 100% безкоштовні.</p>
+                    <p>Подкаст безкоштовно завантажує нові епізоди, і вам не потрібен інтернет, щоб їх слухати. Також ви можете йти на роботу чи їхати в машині, чи навіть працювати та слухати подкасти. На відміну від YouTube, вам не потрібно увесь час сидіти біля монітора і щось дивитися.</p>
                 </div>
             </div>
         </article>
@@ -77,7 +75,27 @@
             <div class="title-main wrapper">
                 <h3>All goods</h3>
             </div>
-            <div class="goods-conteiner wrappe">
+            <div class="goods-conteiner wrapper">
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/podcast-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/podcast-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
                 <figure class="good">
                     <a href="#" class="a-href"></a>
                     <span class="good-img">
