--- a/sport.html
+++ b/sport.html
@@ -26,7 +26,7 @@
                     <div class="drop-list">
                         <div>
                             <div class="logo_wrp">
-                                <div class='logo'>Logo</div>
+                                <div class='logo'><a href="index.html">The Best Day</a></div>
                                 <div class='ext' onclick="hideFxd()">X</div>
                             </div>
                             <div class='ui_wrp'>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">Index</div>    
-            <div class="log-in-block">Log-in/registr</div>
+            <div class="logo"><a href="index.html">The Best Day</a></div>    
+            <div class="log-in-block"><a href="#">Log-in/registr</a></div>
             
         </div>
     </header>
@@ -66,9 +66,9 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Спорт</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <p>Спорт- це здоров'я.Здоровий спосіб життя,правильне і збалансоване харчування,нормальний сон-все це сприяє зміцненню здоров'я,але цього недостатньо.</p>
+                    <p>Щоб стати по-справньому гармонійною людиною потрібно обов'язково займатися спортом!</p>
+                    <p>Спорт є ефективним засобом фізичного виховання, його цінність визначається стимулюючим впливом на поширення фізичної культури серед різних верств населення, і в цьому плані спорт має міжнародне значення.</p>
                 </div>
             </div>
         </article>
@@ -76,7 +76,27 @@
             <div class="title-main wrapper">
                 <h3>All goods</h3>
             </div>
-            <div class="goods-conteiner wrappe">
+            <div class="goods-conteiner wrapper">
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/sport-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/sport-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
                 <figure class="good">
                     <a href="#" class="a-href"></a>
                     <span class="good-img">
