--- a/book.html
+++ b/book.html
@@ -7,7 +7,7 @@
     <title>Site</title>
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="shortcut icon" href="img/logo-ico.ico" type="image/x-icon">
-    <script type="text/javascript" src="eel.js"></script>
+    <script type="text/javascript" src="/eel.js"></script>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
                     <div class="drop-list">
                         <div>
                             <div class="logo_wrp">
-                                <div class='logo'>Logo</div>
+                                <div class='logo'><a href="index.html">The Best Day</a></div>
                                 <div class='ext' onclick="hideFxd()">X</div>
                             </div>
                             <div class='ui_wrp'>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">Index</div>    
-            <div class="log-in-block">Log-in/registr</div>
+            <div class="logo"><a href="index.html">The Best Day</a></div>    
+            <div class="log-in-block"><a href="#">Log-in/registr</a></div>
             
         </div>
     </header>
@@ -59,16 +59,15 @@
         $(".drop-list").css("opacity","0");
         $(".li-menu").css("opacity","0");
     }
-
+    
     </script>
     <main>
         <article class="book-article good-page">
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <h2>Книги</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Earum repellendus perferendis quasi, unde est aspernatur facilis cumque quam debitis dolore </p>
-                    <p>aliquid veniam dignissimos temporibus nulla nesciunt blanditiis, iusto voluptate tenetur.</p>
+                    <p>Книги для саморозвитку — це один із кращих способів пізнання та розкриття себе як особистості. Така література насамперед розширює світогляд, адже ви буквально пірнаєте з головою у думки та життєвий досвід іншої людини.</p>
+                    <p>Звісно, мотиваційні книги не слід сприймати як ключ до вирішення всіх проблем, так само як антидепресанти не слід сприймати як таблетки вічного щастя.Але при грамотному підході до двох вищезгаданих речей — ви зможете перетворити їх у потужну силу для покращення свого фізичного та психологічного стану.</p>
                 </div>
             </div>
         </article>
@@ -76,7 +75,27 @@
             <div class="title-main wrapper">
                 <h3>All goods</h3>
             </div>
-            <div class="goods-conteiner wrappe">
+            <div class="goods-conteiner wrapper">
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/book-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
+                <figure class="good">
+                    <a href="#" class="a-href"></a>
+                    <span class="good-img">
+                        <img src="img/book-good.jpg" alt="#">
+                    </span>
+                    <figcaption>
+                        <p class="good-title">name</p>
+                        <p>avtor</p>
+                    </figcaption>
+                </figure>
                 <figure class="good">
                     <a href="#" class="a-href"></a>
                     <span class="good-img">
