--- a/about-us.html
+++ b/about-us.html
@@ -76,7 +76,7 @@
                         <h2>Артем</h2>
                         <p>Студент Національного Університету "Львівська політехніка"</p>
                         <p>Спеціальність: Комп'ютерна інженерія</p>
-                        <p>Навичики:3Ds Max, Unity, Python, C++, C, C#, HTML, CSS</p>
+                        <p>Навичики:3Ds Max,Unity,Python,C++,C,C#,Html,Css</p>
                     </div>
                     <div class="about-us-img">
                         <img src="img/Art.png" alt="#">
@@ -98,7 +98,7 @@
                         <h2>Захар</h2>
                         <p>Студент Хмельницького Національного Університету</p>
                         <p>Спеціальність: Комп'ютерна інженерія</p>
-                        <p>Навички: Junior Python Developer, C, SQL, HTML, CSS</p>
+                        <p>Навички:Python,C,Sql,Html,Css</p>
                     </div>
                     <div class="about-us-img">
                         <img src="img/hoh.png" alt="#">
@@ -116,10 +116,10 @@
             <div class="introductory-text index-gradient">
                 <div class="wrapper">
                     <div class="about-us-text">
-                        <h2>Володя</h2>
+                        <h2>Вадим</h2>
                         <p>Студент Хмельницького Національного Університету</p>
                         <p>Спеціальність: Комп'ютерна інженерія</p>
-                        <p>Навички: HTML, CSS, JavaScript, Php, C</p>
+                        <p>Навички:Html,Css,JavaScript,Php,C</p>
                     </div>
                     <div class="about-us-img">
                         <img src="img/valodya.png" alt="#">
@@ -141,10 +141,10 @@
                         <h2>Іван</h2>
                         <p>Студент Хмельницького Національного Університету</p>
                         <p>Спеціальність: Автоматизація та комп'ютерно-інтегровані технології</p>
-                        <p>Навички: Blender, Unity, HTML, CSS, JavaScript, C, С#</p>
+                        <p>Навички:Blender,Unity,Html,Css,JavaScript,C,С#</p>
                     </div>
                     <div class="about-us-img">
-                        <img src="img/person-img.png" alt="#">
+                        <img src="img/ivan_without_mirorr.png" alt="#">
                     </div>   
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         <h2>Макс</h2>
                         <p>Студент Національного Університету "Львівська політехніка"</p>
                         <p>Спеціальність: Комп'ютерна інженерія</p>
-                        <p>Навички: HTML, CSS, JavaScript, C, Python</p>
+                        <p>Навички:Html,Css,JavaScript,C,Python</p>
                     </div>
                     <div class="about-us-img">
                         <img src="img/maks.png" alt="#">
