--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="drop-list">
                         <div>
                             <div class="logo_wrp">
-                                <div class='logo'>Logo</div>
+                                <div class='logo'><a href="#">Logo</a></div>
                                 <div class='ext' onclick="hideFxd()">X</div>
                             </div>
                             <div class='ui_wrp'>
@@ -42,8 +42,8 @@
                     </div>
                 </div>
             </div>
-            <div class="logo">The Best Day</div>    
-            <div class="log-in-block">Log-in/registr</div>
+            <div class="logo"><a href="#">Best Day</a></div>    
+            <div class="log-in-block"><a href="/logreg.html">Log-in/registr</a></div>
             
         </div>
     </header>
